--- a/public/index.html
+++ b/public/index.html
@@ -411,7 +411,7 @@
         imagemBaixo = "https://i.imgur.com/mTDyCZP.png";
         itemCTaxaCritico = 5;
         itemCAspdPorcentagem = 5;
-        if($("#itemMeio").val() == "19110") {
+        if($("#itemMeio").val() == "19110a" || $("#itemMeio").val() == "19110b") {
           itemCAtaque = parseInt($("#sor").val() / 20) * 20;
         }
       }
