--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Calculadora de dano crítico para Renegados</title>
-  <meta name="viewport" value="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
