Adjust hover colors on consumables

--- a/public/index.html
+++ b/public/index.html
@@ -3125,8 +3125,8 @@
     }
 
     .lista-consumiveis div label:hover {
-      background: #4883ce;
-      color: white;
+      border: 1px solid #1b5da4;
+	  background: #9abce0;
     }
 
     .lista-consumiveis div input:checked ~ label {
@@ -3136,7 +3136,7 @@
     }
 
     .lista-consumiveis div input:checked ~ label:hover {
-      background: #5a93db;
+      border: 1px solid #4883ce;
     }
 
     .lista-consumiveis div label img {
