fix pingente image

--- a/public/index.html
+++ b/public/index.html
@@ -1169,7 +1169,7 @@
         }
       }
 
-      function cmorrigane(acessorio) {
+      function pmorrigane(acessorio) {
         if(acessorio == "acessorio1") {
           imagemAcessorio1 = "https://i.imgur.com/8UxsH8S.png";
           slotsAcessorio1 = 0;
