Fixed hard def field style

--- a/public/index.html
+++ b/public/index.html
@@ -3908,7 +3908,7 @@
     </tr>
     <tr>
       <td width="50%">Defesa do monstro:</td>
-      <td width="50%"><input type="text" id="hardDEF" autocomplete="off" value="1"></td>
+      <td width="50%"><input type="text" id="hardDEF" autocomplete="off" value="1" style="background: #f4f4f4; border: 0;"></td>
     </tr>
     <tr>
       <td width="50%">Tamanho do monstro:</td>
