Fix custom select mobile

--- a/public/index.html
+++ b/public/index.html
@@ -3621,6 +3621,18 @@
       .atributo td:nth-child(2) input:nth-child(5) {
         left: 113px;
       }
+      .select-group .select-options-group {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: white;
+        border-width: 5px;
+      }
+      .select-group .select-options-group .select-options {
+        max-height: calc(100% - 29px);
+      }
     }
   </style>
 </head>
