Remove outline from attributes

--- a/public/index.html
+++ b/public/index.html
@@ -3054,6 +3054,10 @@
       padding-right: 10px;
     }
 
+    .atributo input[type=text].atributoBase:focus, .atributo input[type=text].atributoBase:active {
+      outline: 0;
+    }
+
     .atributo input[type=button].atributoBonus {
       width: 34px;
       text-align: left;
