Correção de quebra de arma com combo cocar

--- a/public/index.html
+++ b/public/index.html
@@ -2890,7 +2890,7 @@
         calcularPontosAtributo();
 
         var vaiQuebrar = "nao";
-        if($("#itemAcessorio1").val() == "28492b" || $("#itemAcessorio1").val() == "28492d" || $("#itemAcessorio2").val() == "28492b" || $("#itemAcessorio2").val() == "28492d") vaiQuebrar = "sim";
+        if($("#itemAcessorio1").val() == "28492b" || $("#itemAcessorio1").val() == "28492d" || $("#itemAcessorio2").val() == "28492b" || $("#itemAcessorio2").val() == "28492d" || (($("#cartaMeio").val() == "4143" || $("#cartaTopo").val() == "4143") && $("#itemTopo").val() == "400006")) vaiQuebrar = "sim";
         if($("#prevestirarma").prop("checked") == true || $("#cartaArco1").val() == "4407" || $("#cartaArco1").val() == "4072" || $("#cartaArco2").val() == "4407" || $("#cartaArco2").val() == "4072" || $("#sobren-e1").val() == "sobren-e1-golem") { vaiQuebrar = "nao"; }
 
         if(vaiQuebrar == "sim") {
