Adicionada a carta Lorde Seyren

--- a/public/index.html
+++ b/public/index.html
@@ -2863,7 +2863,7 @@
 
         frenesi = 0; forcaViolentissima = 0;
         if($("#itemAcessorio1").val() == "28492b" || $("#itemAcessorio1").val() == "28492d" || $("#itemAcessorio2").val() == "28492b" || $("#itemAcessorio2").val() == "28492d" || (($("#cartaMeio").val() == "4143" || $("#cartaTopo").val() == "4143") && $("#itemTopo").val() == "400006")) { forcaViolentissima = 1; }
-        if($("#itemAcessorio1").val() == "28492c" || $("#itemAcessorio1").val() == "28492d" || $("#itemAcessorio2").val() == "28492c" || $("#itemAcessorio2").val() == "28492d") { frenesi = 2; }
+        if($("#itemAcessorio1").val() == "28492c" || $("#itemAcessorio1").val() == "28492d" || $("#itemAcessorio2").val() == "28492c" || $("#itemAcessorio2").val() == "28492d" || $("#itemTopo").val() == "4357" || $("#itemMeio").val() == "4357") { frenesi = 2; }
         bonusFrenesiForcaViolentissima = 1 + frenesi + forcaViolentissima;
 
         danoCausadoFinal = Math.floor((danoCausado * bonusFrenesiForcaViolentissima) + bonusImpactoExplosivo);
@@ -3850,7 +3850,7 @@
           <option value="1630">Lady Branca</option>
           <option value="1688">Lady Tanee</option>
           <option value="2156">Leak</option>
-          <option value="1646">Lorde Seyren</option>
+          <option value="1646">Lorde Seyren - Ativado</option>
           <option value="1147">Maya</option>
           <option value="1708">Memória de Thanatos</option>
           <option value="2240">Menestrel Alphoccio</option>
@@ -4046,6 +4046,7 @@
               <option value="4506">Carta Dolomedes</option>
               <option value="4458">Carta Duneyrr</option>
               <option value="4583">Carta Engkanto</option>
+              <option value="4357">Carta Lorde Seyren</option>
               <option value="4513">Carta Louva-a-deus Angra</option>
               <option value="4143">Carta Orc Herói</option>
               <option value="4468">Carta Pinguicula Sombria</option>
@@ -4184,6 +4185,7 @@
               <option value="4506">Carta Dolomedes</option>
               <option value="4458">Carta Duneyrr</option>
               <option value="4583">Carta Engkanto</option>
+              <option value="4357">Carta Lorde Seyren</option>
               <option value="4143">Carta Orc Herói</option>
               <option value="4468">Carta Pinguicula Sombria</option>
               <option value="4922">Essência de Morroc DES3</option>
